--- a/inst/scripts/Discordance.Rnw
+++ b/inst/scripts/Discordance.Rnw
@@ -1,14 +1,20 @@
 <<>>=
 library(Beaty)
 ldPath(beadstudiodir())
-data(deletion.ranges)
-data(amp.ranges)
-data(minDistanceRanges)
-data(minDistanceSet)
-data(maxDistanceRanges)
-data(maxDistanceSet)
+##data(deletion.ranges)
+##data(amp.ranges)
+##data(deletion.ranges_test)
+##data(amp.ranges_test)
+##data(minDistanceRanges)
+##data(minDistanceSet)
+##data(maxDistanceRanges)
+##data(maxDistanceSet)
 data(bsSet)
-featureData(maxDistanceSet) <- featureData(minDistanceSet) <- featureData(bsSet)
+srcdir <- "~/projects2/BeatyExperimentData/data"
+load(file.path(srcdir, "minDistanceRanges.rda"))
+load(file.path(srcdir, "deletion.ranges_test.rda"))
+load(file.path(srcdir, "minDistanceSet.rda"))
+##featureData(maxDistanceSet) <- featureData(minDistanceSet) <- featureData(bsSet)
 data(rf); data(cnv)
 ranges.all <- combineRanges(deletion.ranges, amp.ranges)
 data(penn.joint)
@@ -19,35 +25,24 @@ ranges.all <- combineRanges(deletion.ranges, amp.ranges)
 palette <- brewer.pal(9, "Set1")[1:3]
 dist.df <- data.frame.for.rectangles(ranges.all, palette=palette)
 penn.denovo <- getPennDenovo(penn.joint)
-penn.denovo <- penn.denovo[penn.denovo$num.mark >= 10, ]
+penn.denovo <- penn.denovo[penn.denovo$num.mark >= 3, ]
 penn.df <- data.frame.for.rectangles(penn.denovo, palette)
 combined.df <- combine.data.frames(dist.df, penn.df)
 @
 
+This is a ROUGH estimate of discordance.  Better approach would be to
+use findOverlaps.
 
 <<disc>>=
-xlimList <- list(c(100,110),
-		 c(145,150),
-		 c(175,200),
-		 c(67, 72),
-		 c(60, 70),
-		 c(30, 40),
-		 c(40,50),
-		 c(30,40),
-		 c(45,70),
-		 c(55,65),
-		 c(70,80),
-		 c(60,75),
-		 c(0, 100),
-		 c(20,25),
-		 c(15,20),
-		 c(30,35),
-		 c(40,45),
-		 c(30,40),
-		 c(20,22),
-		c(0,60),
-		 c(0,20),
-		 c(0,30))
+pks <- findPeaks(ranges.all)
+chr.index <- split(1:nrow(pks), pks$chrom)
+xlimList <- lapply(chr.index, function(i, rd, FRAME=250e3){
+	rd.chr <- rd[i, ]
+	rd.chr <- rd.chr[order(rd.chr$freq, decreasing=TRUE), ]
+	rd.chr <- rd.chr[1, ]
+	c(min(start(rd.chr))-FRAME, max(end(rd.chr))+FRAME)
+}, rd=pks)
+xlimit <- do.call(rbind, xlimList)
 combined.df <- combine.data.frames(dist.df, penn.df)
 disc.fig <- vector("list", 22)
 conc.fig <- vector("list", 22)
@@ -56,15 +51,18 @@ mykey <- simpleKey(c("homo-del", "hemi-del", "amp"), points=FALSE,
 mykey$rectangles$col <- palette
 mykey$rectangles$border <- palette
 for(CHR in 1:22){
-	dist <- rangesInXlim(ranges.all, CHR=CHR, xlimList[[CHR]]*1e6)
-	penn <- rangesInXlim(penn.denovo, CHR=CHR, xlimList[[CHR]]*1e6)
-	notInPenn <- dist$id[!dist$id %in% penn$id]
-	notInDist <- penn$id[!penn$id %in% dist$id]
-	##plot only the discordant samples
-	combined.chr <- combined.df[combined.df$chr == CHR, ]
-	combined.chr$id <- factor(combined.chr$id)
-	combined.chr <- combined.chr[combined.chr$id %in% c(notInPenn, notInDist), ]
-	disc.fig[[CHR]] <- xyplot(id~midpoint|method+chr, data=combined.chr, panel=my.rectangle,
+	xlim <- xlimit[CHR, ]
+	dist <- rangesInXlim(ranges.all, CHR=CHR, xlim)
+	penn <- rangesInXlim(penn.denovo, CHR=CHR, xlim)
+##	notInPenn <- dist$id[!dist$id %in% penn$id]
+##	notInDist <- penn$id[!penn$id %in% dist$id]
+	dist.df <- data.frame.for.rectangles(dist[!dist$id %in% penn$id, ], palette=palette)
+##	trace(data.frame.for.rectangles, browser)
+	penn.df <- data.frame.for.rectangles(penn[!penn$id %in% dist$id, ], palette=palette)
+	combined.chr <- combine.data.frames(dist.df, penn.df)
+	disc.fig[[CHR]] <- xyplot(id~midpoint|method+chr, data=combined.chr,
+				  prepanel=prepanel.fxn,
+				  panel=my.rectangle,
 				  x0=combined.chr$x0,
 				  x1=combined.chr$x1,
 				  y0=combined.chr$y0,
@@ -80,16 +78,10 @@ for(CHR in 1:22){
 				  layout=c(1, 2),
 				  min=combined.chr$min, max=combined.chr$max,
 				  chr=combined.chr$chr,
-				  plot.cytoband=TRUE, xlim=xlimList[[CHR]])
+				  plot.cytoband=TRUE, xlim=xlim/1e6)
 
-	inPenn <- dist$id[dist$id %in% penn$id]
-	inDist <- penn$id[penn$id %in% dist$id]
-	ids <- intersect(inPenn, inDist)
-	if(length(ids)==0) next()
-	##plot only the discordant samples
-	combined.chr <- combined.df[combined.df$chr == CHR & combined.df$id %in% ids, ]
-	combined.chr$id <- factor(combined.chr$id)
-	conc.fig[[CHR]] <- xyplot(id~midpoint|method+chr, data=combined.chr, panel=my.rectangle,
+xyplot(id~midpoint, data=combined.chr,
+				  panel=my.rectangle,
 				  x0=combined.chr$x0,
 				  x1=combined.chr$x1,
 				  y0=combined.chr$y0,
@@ -100,13 +92,38 @@ for(CHR in 1:22){
 				  chr.size=combined.chr$chr.size,
 				  scales=list(y="free", x="same", rot=0, tick.number=10),
 				  coverage=combined.chr$coverage, xlab="Mb", ylab="offspring id",
-				  show.coverage=FALSE,
-				  key=mykey,
+				  show.coverage=FALSE, key=mykey,
 				  par.strip.text=list(lines=0.7, cex=0.6),
 				  layout=c(1, 2),
 				  min=combined.chr$min, max=combined.chr$max,
 				  chr=combined.chr$chr,
-				  plot.cytoband=TRUE, xlim=xlimList[[CHR]])
+				  plot.cytoband=TRUE, xlim=xlim/1e6)
+
+##	inPenn <- dist$id[dist$id %in% penn$id]
+##	inDist <- penn$id[penn$id %in% dist$id]
+##	ids <- intersect(inPenn, inDist)
+##	if(length(ids)==0) next()
+##	##plot only the discordant samples
+##	combined.chr <- combined.df[combined.df$chr == CHR & combined.df$id %in% ids, ]
+##	combined.chr$id <- factor(combined.chr$id)
+##	conc.fig[[CHR]] <- xyplot(id~midpoint|method+chr, data=combined.chr, panel=my.rectangle,
+##				  x0=combined.chr$x0,
+##				  x1=combined.chr$x1,
+##				  y0=combined.chr$y0,
+##				  y1=combined.chr$y1,
+##				  col=combined.chr$col,
+##				  border=combined.chr$col,
+##				  alpha=1,
+##				  chr.size=combined.chr$chr.size,
+##				  scales=list(y="free", x="same", rot=0, tick.number=10),
+##				  coverage=combined.chr$coverage, xlab="Mb", ylab="offspring id",
+##				  show.coverage=FALSE,
+##				  key=mykey,
+##				  par.strip.text=list(lines=0.7, cex=0.6),
+##				  layout=c(1, 2),
+##				  min=combined.chr$min, max=combined.chr$max,
+##				  chr=combined.chr$chr,
+##				  plot.cytoband=TRUE, xlim=xlim/1e6)
 }
 @
 
@@ -139,18 +156,54 @@ stop()
 Plot the data for ranges inferred by distance but not by PennCNV:
 
 <<>>=
-del.states <- c("332", "331", "321", "221", "231", "431", "341", "432", "342", "441", "442", "421")
-CHR <- 4
-dist <- rangesInXlim(ranges.all, CHR=CHR, xlimList[[CHR]]*1e6)
-penn <- rangesInXlim(penn.denovo, CHR=CHR, xlimList[[CHR]]*1e6)
-notInPenn <- dist$id[!dist$id %in% penn$id]
-notInDist <- penn$id[!penn$id %in% dist$id]
-x <- dist[dist$id %in% notInPenn, ]
-x <- penn[penn$id %in% notInDist, ]
+##xlim <- xlimList[[4]]; xlim[1] <- 69.15
+xlim <- xlimit[4, ]
+##trace(onlyInOne, browser)
+distOnly <- onlyInOne(ranges.all, penn.denovo, CHR=4, xlim=xlim, method='d')
+pennOnly <- onlyInOne(ranges.all, penn.denovo, CHR=4, xlim=xlim, method='p')
+data(bsSet)
+trioList <- initTrioList(bsSet, minDistanceSet)
+df <- constructTrioSetFrom(ranged.data=tmp[1, ], trioList=trioList, FRAME=200e3)
+df$logR <- ifelse(df$logR < -2.8, jitter(-2.8, amount=0.1), df$logR)
+##distOnly$seg.mean[distOnly$seg.mean < -2.5] <- -2.5
+trace(logrpanelfunction2, browser)
+plot.logr <- xyplot(logR ~ x | subject, df,
+		    panel=logrpanelfunction2,
+		    layout=c(1,4),
+		    index.cond=list(4:1),
+		    xlab="Mb",
+		    ylab="",
+		    fill="lightblue",
+		    alpha=1,
+		    border="grey60",
+		    ##ranges=tmp[1,],
+		    ylim=c(-3,2),
+		    highlight=T)
+
+			    highlight.fill=highlight.fill,
+			    highlight.border=highlight.border,
+			    highlight.alpha=highlight.alpha,
+			    ranges=ranges,
+			    panel=logrpanelfunction,
+			    highlight=highlight,
+			    ylim=ylim,
+			    ...)
+
+		if(exists("cbs.segs")){
+			if(CHR != unique(cbs.segs$chrom))
+				load(file.path(beadstudiodir(), paste("cbs_chr" , CHR, ".rda", sep="")))
+		} else 	load(file.path(beadstudiodir(), paste("cbs_chr" , CHR, ".rda", sep="")))
+cbs.segs <- minDistanceRanges[minDistanceRanges$chrom==
+		addSegments(cbs.segs=cbs.segs,
+			    distanceRanges=distanceRanges,
+			    ranges.object=ranges.object[i, ],
+			    col=highlight.border,
+			    bg=highlight.fill,
+			    CHR=CHR, mset=mset,
+			    highlight=highlight, ...)
+
 
 ## focus on the blue stripe just to the right of the more common alteration, as well as the one big deletion
-## - assess whether any of the genotypes suggest non-mendelian inheritance
-x <- x[x$state %in% del.states & start(x)/1e6 > 69.15, ]
 trellis.device(device="pdf", file="figures/penn_chr4_fp_%02d.pdf",
 	       width=8, height=6,
 	       onefile=FALSE)
@@ -160,6 +213,38 @@ pars$xlab.text$cex <- 0.8
 trellis.par.set("axis.text", pars$axis.text)
 trellis.par.set("axis.text", pars$xlab.text)
 ## add arrows to indicate where the taqman probes would hit
+lowlevel.xy(distanceRanges=pennOnly,
+	    distanceSet=minDistanceSet,
+	    bsSet=bsSet,
+	    rf=rf,
+	    cnv=cnv,
+	    xlim=xlim)
+
+lowlevel.xy <- function(distanceRanges, distanceSet,
+			bsSet, rf, cnv,
+			xlim, FRAME=500e3/1e6){
+	for(i in 1:nrow(distanceRanges)){
+		x <- distanceRanges[i, ]
+		xlim <- c(start(x)[i]/1e6 - FRAME,
+			  end(x)[i]/1e6 + FRAME)
+		xlim[1] <- max(xlim[1], 0)
+		grid.newpage()
+		grid.trio2(ranges.object=x[i, ],
+			   distanceRanges=distanceRanges,
+			   distanceSet=distanceSet,
+			   bsSet=bsSet,
+			   xlimit=xlim,
+			   CHR=x$chrom[i],
+			   rf=rf,
+			   cnv=cnv,
+			   cex.genes=0.5,
+			   par.strip.text=list(lines=0.7, cex=0.6),
+			   highlight=TRUE,
+			   cex=0.5, ...)
+	}
+}
+
+
 FRAME <- 500e3/1e6
 for(i in 1:nrow(x)){
 	xlim <- c(start(x)[i]/1e6 - FRAME,
